--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -52,7 +52,7 @@
 
 <p>Na zralé švestky naleje horkou vodu, stáhni s nich slupku, dej je na rendlík, přidej k nim kus cukru, trochu rakouského vina, a nech je zpovolna několik minut dusit, pak je urovnej do vršku na kompotní misku a posyp je cukrem a nakrájenou citronovou kůrou.</p>
 
-<a name="kompot-ze-suchych-svestek-a-ze-sipka"><h2>Kompot ze suchých švestek a ze šipká</h2></a>
+<a name="kompot-ze-suchych-svestek-a-ze-sipku"><h2>Kompot ze suchých švestek a ze šípků</h2></a>
 
 <p>Uvař v pivě suché švestky s několika hřebičkami, kouskem celé skořice a citronové kůry; zároveň uvař ve víně suché šípky, a dej k nim tytéž věci jako ke švestkám, a mimo to kus cukru. Když jest oboje uvařeno, tedy. pěkně rovnej vždy vrstvu šípků, pak vrstvu švestek, a když jest vše urovnáno, udělej pěkný okolek z pomeranče na koláčky rozkrájeného, vše dobře posyp tlučeným cukrem a dej to na stůl. Nemáš-li šípky, tedy je vynech.</p>
 
