--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -88,7 +88,7 @@
 
 <a name="omacka-mejonezova"><h2>Omáčka mejonézová</h2></a>
 
-<p>Skrze sejtko na porcelánovou misku obráceně postavené protlač dva na tvrdo vařené a dva syrové žloutky, a s krapýtkem soli je utři, načež přidej k tomu při ustavičném mícháni tři syrové žloutky a dvanáct lotů olivového oleje, a sice dej vždy jeden žloutek a kávovou lžičku oleje, a stále míchajíc takto pokračuj, až je všecko smícháno; konečně k tomu přidej po částkách též za ustavičného míchání čtyry lžíce rozpuštěného studeného polívkového rosolu čís. 54 (str. 25), z půl citronu šťávu a několik lžic estraganového octa. Dokonalé zdaření této omáčky záleží zvláště na pilném míchání.</p>
+<p>Skrze sejtko na porcelánovou misku obráceně postavené protlač dva na tvrdo vařené a dva syrové žloutky, a s krapýtkem soli je utři, načež přidej k tomu při ustavičném mícháni tři syrové žloutky a dvanáct lotů olivového oleje, a sice dej vždy jeden žloutek a kávovou lžičku oleje, a stále míchajíc takto pokračuj, až je všecko smícháno; konečně k tomu přidej po částkách též za ustavičného míchání čtyry lžíce rozpuštěného studeného <a href="polivky-masite.html#rosol-polivkovy">polívkového rosolu</a>, z půl citronu šťávu a několik lžic estraganového octa. Dokonalé zdaření této omáčky záleží zvláště na pilném míchání.</p>
 
 <a name="kren-smetanovy"><h2>Křen smetanový</h2></a>
 
