--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -12,15 +12,15 @@
 
 <a name="rybizova-stava-za-studena-pripravena"><h2>Rybízová šťáva za studena připravená</h2></a>
 
-<p>Ober pěkné zralé rybízové zrnka a proceď je. Na žejdlík šťávy utluč co nejjemněji libru nejpěknějšího cukru, pak ho dej <b>se </b>šťávou na porcelánovou misku a míchej tím novou malou vařečkou stále k jedné straně tři hodiny bez přestání, potom tím naplň malé skleněné nádobky, obvaz je papírem a uschovej. – Tato šťáva se může v létě nalejt do formy rosolové, a když ustydne, vyklopí se jako rosol a podá se pro občerstvení.</p>
+<p>Ober pěkné zralé rybízové zrnka a proceď je. Na žejdlík šťávy utluč co nejjemněji libru nejpěknějšího cukru, pak ho dej se šťávou na porcelánovou misku a míchej tím novou malou vařečkou stále k jedné straně tři hodiny bez přestání, potom tím naplň malé skleněné nádobky, obvaz je papírem a uschovej. – Tato šťáva se může v létě nalejt do formy rosolové, a když ustydne, vyklopí se jako rosol a podá se pro občerstvení.</p>
 
 <a name="malinova-zavareninka"><h2>Malinová zavařeninka</h2></a>
 
-<p>Rozmačkej několik žejdlíků pěkných zralých malin a proceď je skrze sejtko; potom dej libru šťávy a čtvrt libry celých malin na čistý nový kastrol, přidej k tomu libru na malé kousky nasekaného cukru a nech ho dříve ve šťávě docela rozpustit, pak to teprva postav na mírný oheň a nech to jen tak dlouho vařit, až to zkoušku v čís. 1. udanou obstojí; načež to odstav a jako předešlé uschovej. Kdo malinové jadérka nemiluje, může pouze šťávu s cukrem zvařit; někdo ale má rád, když se několik jadérek na sklenicích objeví.</p>
+<p>Rozmačkej několik žejdlíků pěkných zralých malin a proceď je skrze sejtko; potom dej libru šťávy a čtvrt libry celých malin na čistý nový kastrol, přidej k tomu libru na malé kousky nasekaného cukru a nech ho dříve ve šťávě docela rozpustit, pak to teprva postav na mírný oheň a nech to jen tak dlouho vařit, až to <a href="#rybizova-zavareninka">zkoušku</a> obstojí; načež to odstav a jako předešlé uschovej. Kdo malinové jadérka nemiluje, může pouze šťávu s cukrem zvařit; někdo ale má rád, když se několik jadérek na sklenicích objeví.</p>
 
 <a name="visnova-stava"><h2>Višňová šťáva</h2></a>
 
-<p>Vezmi několik žejdlíků zralých pěkných višní, šťopky oškubej, višně i s peckami utluč v mosazném moždíři, dej je do hrnku a nech je v něm 24 hodin stát, potom šťávu skrze čistý šat proceď. Na libru šťávy nech na čistém rendlíku tři čtvrtě libry cukru s půl žejdlíkem vody zvařit ke třetímu stupni (viz str. 468, čís. 2.), pěnu seber, k cukru přidej libru té višňové šťávy a nech jen jeden var ještě přes to přejít, načež pěnu opět seber a šťávu uschovej v prohřátých skleněných láhvích.</p>
+<p>Vezmi několik žejdlíků zralých pěkných višní, šťopky oškubej, višně i s peckami utluč v mosazném moždíři, dej je do hrnku a nech je v něm 24 hodin stát, potom šťávu skrze čistý šat proceď. Na libru šťávy nech na čistém rendlíku tři čtvrtě libry cukru s půl žejdlíkem vody zvařit ke třetímu stupni, pěnu seber, k cukru přidej libru té višňové šťávy a nech jen jeden var ještě přes to přejít, načež pěnu opět seber a šťávu uschovej v prohřátých skleněných láhvích.</p>
 
 <a name="visnova-zavareninka"><h2>Višňová zavařeninka</h2></a>
 
@@ -28,7 +28,7 @@
 
 <a name="zavareninka-z-amarelek"><h2>Zavařeninka z amarelek</h2></a>
 
-<p>Na libru pěkných vyloupaných amarelek vezmi tři čtvrtě libry přetlučeného cukru, dej oboje na čistý rendlík a nech to právě tak vařit jako višně v předešlém čísle; když to vychladne, dej to do sklenic a obvaz je silným papírem.</p>
+<p>Na libru pěkných vyloupaných amarelek vezmi tři čtvrtě libry přetlučeného cukru, dej oboje na čistý rendlík a nech to právě tak vařit jako višně v předešlém receptu; když to vychladne, dej to do sklenic a obvaz je silným papírem.</p>
 
 <a name="tresnova-zavareninka"><h2>Třešňová zavařeninka</h2></a>
 
@@ -46,7 +46,7 @@
 
 <a name="sipkova-zavareninka"><h2>Šípková zavařeninka</h2></a>
 
-<p>Ze zralých šípků, které jsou teprva trhány, když je podzimní mrázek obešel, vyber jadýrka, šípky několikrát ve studené vodě čistě vyper, pak na ně nalej horkou vodu a nech je v ní stát, až voda vychladne, načež ji slej a šípky nech na čistém šatě osáknout. Mezitím učisti na libru šípků dle čísla 3. (str. 451) libru cukru, pak dej šípky do něho a nech je mezi ustavičným mícháním rozvařit a na hustou kasičku zvařit; když vychladnou, dej je do sklenic, teprva druhého dne je obvaz papírem a uschovej.</p>
+<p>Ze zralých šípků, které jsou teprva trhány, když je podzimní mrázek obešel, vyber jadýrka, šípky několikrát ve studené vodě čistě vyper, pak na ně nalej horkou vodu a nech je v ní stát, až voda vychladne, načež ji slej a šípky nech na čistém šatě osáknout. Mezitím učisti na libru <a href="zavarene-cele-ovoce.html#sipky-v-cukru-zavarene">šípků</a>, libru cukru, pak dej šípky do něho a nech je mezi ustavičným mícháním rozvařit a na hustou kasičku zvařit; když vychladnou, dej je do sklenic, teprva druhého dne je obvaz papírem a uschovej.</p>
 
 <a name="jablkova-zavareninka"><h2>Jablková zavařeninka</h2></a>
 
