--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -146,7 +146,7 @@
 
 <a name="polivka-s-krupicnymi-knedlickami"><h2>Polívka s krupičnými knedlíčkami</h2></a>
 
-<p>Utři 6 lotů nového másla, nebo 5 lotů sebrané mastnoty s hovězího masa, při kterém se buď tučná slepice nebo husí drobečky (kaldoun) vaří, do toho se vrazí dva žloutky, dvě celé vejce a trochu se to osolí; pak se do toho dá lžíce studeného mléka a tolik krupice, aby se z toho, když se to asi čtvrt hodiny ustojí, nechaly knedlíčky do polívky zavařit. Velké suché krupice je dost půl žejdlíka, není-li suchá, musí <b>se </b>přidat. Tyto knedlíčky mohou se zavařit do čtyr až pěti žejdlíků dobré hovězí polívky, a stačí pro 6 i 8 osob.</p>
+<p>Utři 6 lotů nového másla, nebo 5 lotů sebrané mastnoty s hovězího masa, při kterém se buď tučná slepice nebo husí drobečky (kaldoun) vaří, do toho se vrazí dva žloutky, dvě celé vejce a trochu se to osolí; pak se do toho dá lžíce studeného mléka a tolik krupice, aby se z toho, když se to asi čtvrt hodiny ustojí, nechaly knedlíčky do polívky zavařit. Velké suché krupice je dost půl žejdlíka, není-li suchá, musí se přidat. Tyto knedlíčky mohou se zavařit do čtyr až pěti žejdlíků dobré hovězí polívky, a stačí pro 6 i 8 osob.</p>
 
 <a name="polivka-se-zemcatovymi-knedlickami"><h2>Polívka se zemčatovými knedlíčkami</h2></a>
 
