--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -288,11 +288,11 @@
 
 <a name="smazene-svestky"><h2>Smažené švestky</h2></a>
 
-<p>Uvař pěkné suché švestky, vytlač z nich pecky, a na místo těchto strč do každé švestky jednu opařenou mandli; pak udělej těstíčko jako v předešlém čísle, obal v něm švestky, klad je.do rozpáleného přepouštěného másla a nech je do zlatova vysmažit; pak je posyp skořicí a cukrem a dej je na stůl.</p>
+<p>Uvař pěkné suché švestky, vytlač z nich pecky, a na místo těchto strč do každé švestky jednu opařenou mandli; pak udělej těstíčko jako v předešlém receptu, obal v něm švestky, klad je.do rozpáleného přepouštěného másla a nech je do zlatova vysmažit; pak je posyp skořicí a cukrem a dej je na stůl.</p>
 
 <a name="smazene-zavitky-s-jahodami"><h2>Smažené závitky s jahodami</h2></a>
 
-<p>Mnoho-li chceš dělat závitků, podle toho vezmi pěkných jahod a přeber je; na žejdlík jahod utluč šest lotů cukru, pak nim jahody posyp a pospolu to promíchej; potom nastříhej oplatky na čtyry prsty dlouhé a též tak široké, do prostřed každého lístku dej hromádku jahod a zaviň je; pak udělej, těsto podle čísla 70, závitky v něm omáčej a usmaž je v přepouštěném rozpáleném másle, potom je pěkně urovnej na talíř a posyp je tlučeným cukrem.</p>
+<p>Mnoho-li chceš dělat závitků, podle toho vezmi pěkných jahod a přeber je; na žejdlík jahod utluč šest lotů cukru, pak nim jahody posyp a pospolu to promíchej; potom nastříhej oplatky na čtyry prsty dlouhé a též tak široké, do prostřed každého lístku dej hromádku jahod a zaviň je; pak udělej <a href="#smazene-jablkove-venecky">těsto</a>, závitky v něm omáčej a usmaž je v přepouštěném rozpáleném másle, potom je pěkně urovnej na talíř a posyp je tlučeným cukrem.</p>
 
 <a name="krem"><h2>Krém</h2></a>
 
