--- a/src/napoje.html
+++ b/src/napoje.html
@@ -26,7 +26,7 @@
 
 <a name="puns-se-sampanskym-vinem"><h2>Punš se šampaňským vínem</h2></a>
 
-<p>Upraví se zcela tak jako v předešlém čísle, jen že místo rýnského vína dají se dvě láhve šampaňského.</p>
+<p>Upraví se zcela tak jako v předešlém receptu, jen že místo rýnského vína dají se dvě láhve šampaňského.</p>
 
 <a name="grog"><h2>Grog</h2></a>
 
