--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -216,15 +216,15 @@
 
 <a name="lite-strudle-cili-omeletky-s-povidlami"><h2>Lité štrudle čili omeletky s povidlami</h2></a>
 
-<p>Udělej těsto jako v předešlém čísle a lej z něho štrudličky; rozdělej povidla, ne však příliš řídce, oslad je, přidej k nim citronové kůry a trochu tlučené skořice, pak nimi pomaž ty štrudličky, zaviň je, urovnej na máslem vymazaný rendlík, poklad je povrchu máslem a nech je v troubě trochu vypéct, pak je posyp cukrem a nes na stůl.</p>
+<p>Udělej těsto jako v předešlém receptu a lej z něho štrudličky; rozdělej povidla, ne však příliš řídce, oslad je, přidej k nim citronové kůry a trochu tlučené skořice, pak nimi pomaž ty štrudličky, zaviň je, urovnej na máslem vymazaný rendlík, poklad je povrchu máslem a nech je v troubě trochu vypéct, pak je posyp cukrem a nes na stůl.</p>
 
-<a name="lite-strudle-a-tvarohem"><h2>Lité štrudle a tvarohem</h2></a>
+<a name="lite-strudle-s-tvarohem"><h2>Lité štrudle s tvarohem</h2></a>
 
-<p>Udělají se na týž způsob jako předešlé, jen že se místo povidel nadějou tvarohem následovně připraveným: Utři půl libry tvarohu se čtvrt librou másla a se šesti loty ustrouhaného parmazánského sýra, a vmíchej do toho čtyry žloutky; načež tím omeletky pomaž, zaviň a klad je vedle sebe na máslem hodně vymazaný kastrol nebo do formy, pomaž je hodně rozpuštěným máslem á nech je v troubě napolo upect, potom je ještě potři máslem, posyp strouhaným parmazánským sýrem a nech je dopect. Také se mohou nadíval: sladkým tvarohem, dle čísla 46 připraveným.</p>
+<p>Udělají se na týž způsob jako předešlé, jen že se místo povidel nadějou tvarohem následovně připraveným: Utři půl libry tvarohu se čtvrt librou másla a se šesti loty ustrouhaného parmazánského sýra, a vmíchej do toho čtyry žloutky; načež tím omeletky pomaž, zaviň a klad je vedle sebe na máslem hodně vymazaný kastrol nebo do formy, pomaž je hodně rozpuštěným máslem á nech je v troubě napolo upect, potom je ještě potři máslem, posyp strouhaným parmazánským sýrem a nech je dopect. Také se mohou nadívat <a href="#dobra-strudle-s-tvarohem">sladkým tvarohem</a>.</p>
 
 <a name="lite-strudle-s-cokoladou"><h2>Lité štrudle s čokoládou</h2></a>
 
-<p>Upec lístky z těsta jako v čísle 52; nech v půl druhém žejdlíku smetany zvařit čtvrt libry čokolády, přidej k tomu čtyry loty cukru a hodně zakverluj; rozmíchej s trochou studené smetany šest žloutků, nalej na to tu vařící čokoládu a kverluj tím u ohně tak dlouho, až to hodně zhoustne, a nech to prochladnout; potom tím potři omeletky, zaviň a urovnej je do máslem vymazané formy, polej je trochu dobrou sladkou smetanou, pomaž je máslem, posyp cukrem a nech je. malé půl hodiny pect. Také se mohou jato štrudle číslo 53 v půli rozkrojit a dle téhož udání usmažit.</p>
+<p>Upec <a href="#lite-strudle-s-miseninkou">lístky z těsta</a>; nech v půl druhém žejdlíku smetany zvařit čtvrt libry čokolády, přidej k tomu čtyry loty cukru a hodně zakverluj; rozmíchej s trochou studené smetany šest žloutků, nalej na to tu vařící čokoládu a kverluj tím u ohně tak dlouho, až to hodně zhoustne, a nech to prochladnout; potom tím potři omeletky, zaviň a urovnej je do máslem vymazané formy, polej je trochu dobrou sladkou smetanou, pomaž je máslem, posyp cukrem a nech je. malé půl hodiny pect. Také se mohou jako <a href="#lite-smazene-strudle">štrudle</a> v půli rozkrojit a dle téhož udání usmažit.</p>
 
 <a name="kraple-s-povidlami"><h2>Kraple s povidlami</h2></a>
 
@@ -232,7 +232,7 @@
 
 <a name="kraple-se-spenatem"><h2>Kraple se špenátem</h2></a>
 
-<p>Přeber a vyper v několika vodách mladý špenát, pak na něj nalej vařící vodu a nech ho ovařit, potom vodu sceď a špenát na drobounko usekej. Skrájej drobně jednu cibuli a nech ji na másle spěnit, dej do toho tři vařečky mouky, pak ten špenát, osol ho, zamíchej a nech ho dusit; přilej ještě trochu hovězí polívky, vmíchej do něho asi tři žloutky, aby byl hezky hustý, a nech ho vystydnout. Udělej těsto jako v předešlém čísle a též tak ho rozválej, načež ho nadívej špenátem, kraple kružátkem vykrajuj, uvař je, posyp strouhanou žemličkovou kůrkou a polej rozpáleným máslem.</p>
+<p>Přeber a vyper v několika vodách mladý špenát, pak na něj nalej vařící vodu a nech ho ovařit, potom vodu sceď a špenát na drobounko usekej. Skrájej drobně jednu cibuli a nech ji na másle spěnit, dej do toho tři vařečky mouky, pak ten špenát, osol ho, zamíchej a nech ho dusit; přilej ještě trochu hovězí polívky, vmíchej do něho asi tři žloutky, aby byl hezky hustý, a nech ho vystydnout. Udělej těsto jako v předešlém receptu a též tak ho rozválej, načež ho nadívej špenátem, kraple kružátkem vykrajuj, uvař je, posyp strouhanou žemličkovou kůrkou a polej rozpáleným máslem.</p>
 
 <a name="rejzova-kase"><h2>Rejžová kaše</h2></a>
 
