--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -22,7 +22,7 @@
 
 <a name="nakyp-rejzovy-s-nadivanymi-jablkami"><h2>Nákyp rejžový s nadívanými jablkami</h2></a>
 
-<p>Přeber čtvrt libry rejže, vyper ji nejdříve v hrnku ve studené vodě, pak na ni nalej vařící vodu a zase ji vařečkou hodně vyper, načež vodu slej, a nalej na ni opět vařící voda a nech ji v ni chvilku stát; potom vodu zašle sej, rejži dej na kastrol, nalej na ni vařící smetany, a nech to vařit, až jest rejže dost měkká, d$j však pozor, aby se nerozmíchala, načež ji nech vychladnout; potom utři lot čerstvého másla, dej do něho tu rejži, 6 lotů tlučeného cukru, vraz do toho 6 žloutků, každý dobře zamíchej, přidej k tomu s půl citronu drobně rozkrájenou kůru a tuhý sníh ze čtyr bílků, a trošinku to osol; nyní vymaž máslem kulatou formu, s kterou to přijde na tabuli, a nalej do ni tu píchanou kaši; oloupej 6 nebo 9 pěkných stejných míšeňských jablek, ohryzek vydlabej opatrně ven, a místo něco dej do jablek buď zavařený rybíz, nebo drobně rozkrájené oloupané sladké mandle s velkými hrozinkami bez jadýrek, načež urovnej jablka do té rejže a vmáčkni je do ni přes polovičku, jedno jablko dej do prostředka, posyp to hodně tlučeným cukrem a nech to pect; když je to asi přes polovic upečeno, posyp to zase tlučeným cukrem, smíchaným, se strouhanými mandlemi, a nech to dopect. Když to chceš dát na tabuli, posyp to ještě tlučeným cukrem. Je to ouhledné a dobré jídlo.</p>
+<p>Přeber čtvrt libry rejže, vyper ji nejdříve v hrnku ve studené vodě, pak na ni nalej vařící vodu a zase ji vařečkou hodně vyper, načež vodu slej, a nalej na ni opět vařící voda a nech ji v ni chvilku stát; potom vodu zašle sej, rejži dej na kastrol, nalej na ni vařící smetany, a nech to vařit, až jest rejže dost měkká, dej však pozor, aby se nerozmíchala, načež ji nech vychladnout; potom utři lot čerstvého másla, dej do něho tu rejži, 6 lotů tlučeného cukru, vraz do toho 6 žloutků, každý dobře zamíchej, přidej k tomu s půl citronu drobně rozkrájenou kůru a tuhý sníh ze čtyr bílků, a trošinku to osol; nyní vymaž máslem kulatou formu, s kterou to přijde na tabuli, a nalej do ni tu píchanou kaši; oloupej 6 nebo 9 pěkných stejných míšeňských jablek, ohryzek vydlabej opatrně ven, a místo něco dej do jablek buď zavařený rybíz, nebo drobně rozkrájené oloupané sladké mandle s velkými hrozinkami bez jadýrek, načež urovnej jablka do té rejže a vmáčkni je do ni přes polovičku, jedno jablko dej do prostředka, posyp to hodně tlučeným cukrem a nech to pect; když je to asi přes polovic upečeno, posyp to zase tlučeným cukrem, smíchaným, se strouhanými mandlemi, a nech to dopect. Když to chceš dát na tabuli, posyp to ještě tlučeným cukrem. Je to ouhledné a dobré jídlo.</p>
 
 <a name="nakyp-se-smazenymi-nudlemi"><h2>Nákyp se smaženými nudlemi</h2></a>
 
@@ -52,7 +52,7 @@
 
 <a name="jiny-nakyp-ze-smazene-zemlicky"><h2>Jiný nákyp ze smažené žemličky</h2></a>
 
-<p>Ostrouhej 3 nebo 4 žemličky, rozkrájej je na lístky a usmaž je do zlatova; nalej na čistý rendlík dva žejdlíky červeného vína, dej do něho půl libry cukru, rozkrájené citronové kůry, trochu hřebíčku, trochu tlučené skořice, a nech to vařit<b>; </b>když se z toho třetí díl vyvaří, vlej to na tu žemličku, aby tím namokla; potom vylož formu máslem pomazaným papírem, vlož do ni vrstvu těch žemliček, pomaž je zavařeným rybízem, na to dej opět vrstvu žemliček, zase rybíz, a tak pokračuj až je všecko, načež to nech v troubě upect; potom to vyklop, posyp cukrem a dej to na stůl.</p>
+<p>Ostrouhej 3 nebo 4 žemličky, rozkrájej je na lístky a usmaž je do zlatova; nalej na čistý rendlík dva žejdlíky červeného vína, dej do něho půl libry cukru, rozkrájené citronové kůry, trochu hřebíčku, trochu tlučené skořice, a nech to vařit; když se z toho třetí díl vyvaří, vlej to na tu žemličku, aby tím namokla; potom vylož formu máslem pomazaným papírem, vlož do ni vrstvu těch žemliček, pomaž je zavařeným rybízem, na to dej opět vrstvu žemliček, zase rybíz, a tak pokračuj až je všecko, načež to nech v troubě upect; potom to vyklop, posyp cukrem a dej to na stůl.</p>
 
 <a name="nakyp-z-rejze"><h2>Nákyp z rejže</h2></a>
 
@@ -142,7 +142,7 @@
 
 <a name="nakyp-z-kaproveho-mleci"><h2>Nákyp z kaprového mléčí</h2></a>
 
-<p>Nech pěkné kaprové mléči s lotem másla do měkká dusit, utři <b>3 </b>loty másla, dej do něho to mléči a dobře to utři; pak dej k tomu půl druhé v mléce namočené žemličky, 6 žloutků, 2 loty sladkých loudaných, drobně rozkrájených mandli, 2 loty tlučeného cukru, trochu drobně rozkrájené citronové kůry, trochu květu, osol to trochu, dobře to utři, konečně do toho vmíchej sníh z pěti bílků, vymaž formu máslem, vysyp ji žemličkovou kůrkou, dej to do ní a nech to hodinu v páře vařit nebo pect; pak to vyklop, posyp cukrem a dej na tabuli.</p>
+<p>Nech pěkné kaprové mléči s lotem másla do měkká dusit, utři 3 loty másla, dej do něho to mléči a dobře to utři; pak dej k tomu půl druhé v mléce namočené žemličky, 6 žloutků, 2 loty sladkých loudaných, drobně rozkrájených mandli, 2 loty tlučeného cukru, trochu drobně rozkrájené citronové kůry, trochu květu, osol to trochu, dobře to utři, konečně do toho vmíchej sníh z pěti bílků, vymaž formu máslem, vysyp ji žemličkovou kůrkou, dej to do ní a nech to hodinu v páře vařit nebo pect; pak to vyklop, posyp cukrem a dej na tabuli.</p>
 
 <a name="nakyp-s-racim-maslem"><h2>Nákyp s račím máslem</h2></a>
 
