--- a/src/pecene.html
+++ b/src/pecene.html
@@ -112,7 +112,7 @@
 
 <p>S naloženého srnčího hřbetu nebo kejty ořežou se čistě všecky kůžičky, prostrká se hezky slaninku, dá se na pekáč, podleje se vinním octem a vodou, také se může k němu dát cibule a několik zrnek celého pepře, a nechá se hezky do tmava upect; při pečení polévá se také hustou kyselou smetanou jako zajíc, jen že se musí déle pect; když se dává na stůl, podleje se procezenou omáčkou.</p>
 
-<a name="jeleni-hrbet-se-smazenou-zemlickou"><h2>Jeleni hřbet se smaženou žemličkou</h2></a>
+<a name="jeleni-hrbet-se-smazenou-zemlickou"><h2>Jelení hřbet se smaženou žemličkou</h2></a>
 
 <p>Když se jelení hřbet dá mezi pečeně, tedy se připravuje jako srnčí kejta. Časem se ale předkládá po hovězím mase; v tom pádu se ne protahuje slaninou, ale osolí se, dá se na pekáč, pod něj kousek rozkrájené slaniny, kousek másla a trochu vody, a nechá se tak. jako jiná pečeně hezky do hněda upect; pak se dá na mísu, podleje se procezenou šťávou a posype se strouhanou smaženou žemličkou. K němu se dá na stůl v nádobce buď sardelová nebo šípková omáčka.</p>
 
