--- a/src/uvod.html
+++ b/src/uvod.html
@@ -8,7 +8,7 @@
 
 <p>Železné nádobí, jehož se v novějším čase zhusta užívá, nemá se, když je prázdné, nechávati stát na horkém místě, protože v takovémto případu vnitřní bílý nátěr snadno odpryskuje; stane-li se to však přece, tedy se nesmí v takovéto odprýskané nádobě nic kyselého vařit, protože by tím způsobená plíseň mohla býti zdraví škodlivá.</p>
 
-<p>Měděné nádobí se musí buď popelem nebo červenou hlínou tak dlouho drhnout, až se leskne jako zlato. Uvnitř, kde je cínované, meje se luhem a přesličkou; načež se hodně oplákne ve studené vodě a v létě na slunci, v zimě pak u teplých kamen osušit nechá. Při tomto nádobí má se vůbec pozorovali, aby vždy, nežli se ho upotřebí, dobře bylo vyčištěno, taktéž aby se v něm pokrmy, zvláště kyselé, stati nenechávaly, hlavně v takovém<i>, </i>které není dobře vycínované, protože to jest zdraví nanejvýš škodlivé, ano i nebezpečné.</p>
+<p>Měděné nádobí se musí buď popelem nebo červenou hlínou tak dlouho drhnout, až se leskne jako zlato. Uvnitř, kde je cínované, meje se luhem a přesličkou; načež se hodně oplákne ve studené vodě a v létě na slunci, v zimě pak u teplých kamen osušit nechá. Při tomto nádobí má se vůbec pozorovali, aby vždy, nežli se ho upotřebí, dobře bylo vyčištěno, taktéž aby se v něm pokrmy, zvláště kyselé, stati nenechávaly, hlavně v takovém, které není dobře vycínované, protože to jest zdraví nanejvýš škodlivé, ano i nebezpečné.</p>
 
 <p>Mosaz čistí se nejlépe utlučeným, ve vinním octě nebo v kořalce rozmočeným tryplem; tře se hodně suknem, a tak je vždy jako nový.</p>
 
