--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <li><a href="pecene.html">Pečené</a></li>
 <li><a href="salaty.html">Saláty</a></li>
 <li><a href="kompoty.html">Kompoty</a></li>
-<li><a href="masite-rosoly-huspeniny-sulzen.html">Masité rosoly (huspeniny, Sulzen)</a></li>
+<li><a href="masite-rosoly.html">Masité rosoly</a></li>
 <li><a href="rybi-a-postni-polivky.html">Rybí a postní polívky</a></li>
 <li><a href="rozlicne-ryby.html">Rozličné ryby</a></li>
 <li><a href="raci-zaby-sneci-a-musle.html">Raci, žáby, šneci a mušle</a></li>
